# mongobar

./: .gitignore  Cargo.toml  build.sh  mongobar.example.json  readme-en.md  readme.md
.github/workflows/: sync-gitee.yml
aliyun-audit-trans/: README.md  package.json  pnpm-lock.yaml
aliyun-audit-trans/src/: client.js
docker/: clear.sh  docker-compose.yml  readme.md
docker/data/mongodb/mongo3/: mongodb.key
src/: analyze.rs  commands.rs  convert.rs  indicator.rs  main.rs  mongo_stats.rs  mongobar.rs  ui.rs  utils.rs
src/mongobar/: mod.rs  mongobar_config.rs  op_logs.rs  op_row.rs  op_state.rs
src/tool/: analyze.rs  convert.rs  filter.rs  mod.rs  reg_filter.rs
