[package]
name = "mongobar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full", "tracing"] }
console-subscriber = "0.3.0"
mongodb = "3.0.0"
anyhow = "1.0.86"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
bson = "2.11.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }

[dependencies.educe]
version = "*"
features = ["Default"]
default-features = false

[dev-dependencies]
tokio-console = "0.1.11"

[build]
rustflags = ["--cfg", "tokio_unstable"]
