[package]
name = "mongobar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mongobar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38.0", features = ["full", "tracing"] }
futures = "0.3.30"
console-subscriber = "0.3.0"
mongodb = "3.0.0"
anyhow = "1.0.86"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
bson = "2.11.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }
ratatui = { version = "0.27.0", features = ["crossterm"] }
tui-input = "*"
rand = "*"
serde_json_path = "0.6.7"
regex = "1.10.5"
num_cpus = "1.16.0"
csv = "1.3.0"
once_cell = "1.19.0"
rayon = "1.10.0"
sha3 = "0.10.8"
hex = "0.4.3"
hashbrown = "0.14"

[dependencies.educe]
version = "*"
features = ["Default"]
default-features = false

[dev-dependencies]
tokio-console = "0.1.11"

[build]
rustflags = ["--cfg", "tokio_unstable"]
